[package]
name = "ferrodmg"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Millward <jacob@millward.dev>"]
description = "A GameBoy emulator"
repository = "https://github.com/JacobMillward/ferrodmg"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
muda = "0.11.2"
image = "0.24.7"
pixels = "0.13.0"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.52.0"
